tests/fixtures/valid/inline_dag_call_cross_file_indexed/src/lib/lib.gcl
pub index Region = { A, B };

pub dag doubler {
    import lib.lib.{ Region };

    param v: Length[Region];

    pub node result: Length[Region] = for r: Region { @v[r] * 2.0 };
}
