tests/fixtures/errors/index_match_with_bindings.gcl
// Error: index variant patterns cannot have field bindings
cat Maneuver { Departure, Correction, Insertion }

node result: Dimensionless[Maneuver] = for m: Maneuver {
    match m {
        Maneuver::Departure { x } => 1.0,
        Maneuver::Correction => 2.0,
        Maneuver::Insertion => 3.0,
    }
};
